device: Support configuring dhcp-send-hostname globally
The user does not want to send machine hostname to the DHCP server
globally by default to avoid ddns record getting created in IPAM.
otherwise, IPAM creates ddns records which might interfere with user's
regular host record. Thus, introduce the ternary property
dhcp_send_hostname_v2 to warrant this behavior.

Notice that we set the GSpec of dhcp-send-hostname-v2 to int, because
defining it as enum would make that it cannot be expanded in a backwards
compatible way if we need to add more values: old clients using libnm
would reject it due to the new value being unknown. Follow the same
strategy than _nm_setting_property_define_direct_enum, defining the
NMSettInfoPropertType as enum, but the glib's GSpec as int.

Resolves: https://issues.redhat.com/browse/RHEL-56565
https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/2029
https://gitlab.freedesktop.org/NetworkManager/NetworkManager-ci/-/merge_requests/1765

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1660,6 +1660,10 @@
                   dbus-type="b"
                   gprop-type="gboolean"
                   />
+        <property name="dhcp-send-hostname-v2"
+                  dbus-type="i"
+                  gprop-type="gint"
+                  />
         <property name="dhcp-send-release"
                   dbus-type="i"
                   gprop-type="NMTernary"
@@ -1806,6 +1810,10 @@
         <property name="dhcp-send-hostname"
                   dbus-type="b"
                   gprop-type="gboolean"
+                  />
+        <property name="dhcp-send-hostname-v2"
+                  dbus-type="i"
+                  gprop-type="gint"
                   />
         <property name="dhcp-send-release"
                   dbus-type="i"
