--- a/.triage-policies.yml
+++ b/.triage-policies.yml
@@ -182,3 +182,47 @@ resource_rules:
               Work is necessary to move it forward.
             labels:
               - stale
+
+      - name: Label for MRs authored by core contributors (member_of project)
+        conditions:
+          state: opened
+          forbidden_labels:
+            - core-contributor
+            - community-contributor
+          author_member:
+            source: project
+            condition: member_of
+            source_id: NetworkManager/NetworkManager
+        actions:
+          labels:
+            - core-contributor
+
+      - name: Label for MRs authored by core contributors (member_of group)
+        conditions:
+          state: opened
+          forbidden_labels:
+            - core-contributor
+            - community-contributor
+          author_member:
+            source: group
+            condition: member_of
+            source_id: NetworkManager
+        actions:
+          labels:
+            - core-contributor
+
+      - name: Label for MRs authored by community contributors and ensure CI is run
+        conditions:
+          state: opened
+          forbidden_labels:
+            - core-contributor
+            - community-contributor
+        actions:
+          labels:
+            - community-contributor
+          comment_type: thread
+          comment: >-
+            Atention maintainers: remember to run the CI!!
+            
+            This MR is authored by a contributor from the community and the CI does not
+            run automatically.
