CI: add testlog.txt as build artifacts
That way we will be able to check the logs in the case of failure.

(cherry picked from commit 0d4c8a235a16f113c0b91712f79e1295cbb9bcbe)
(cherry picked from commit b6e2533f82e00b3b663de831119eb244a4937c22)
(cherry picked from commit fc238062bd85f4f44e54391fa792e586ef1a060a)
(cherry picked from commit e8532d4a41eb9a56faf85dea76088dcba18ff02e)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,11 +57,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-d53edbf2ebdd'
-  CENTOS_TAG:  'tag-c374af7add25'
-  DEBIAN_TAG:  'tag-0e28ea47158f'
-  FEDORA_TAG:  'tag-c374af7add25'
-  UBUNTU_TAG:  'tag-0e28ea47158f'
+  ALPINE_TAG:  'tag-a53799f015bb'
+  CENTOS_TAG:  'tag-0711a92b9f36'
+  DEBIAN_TAG:  'tag-0f5f286d0007'
+  FEDORA_TAG:  'tag-0711a92b9f36'
+  UBUNTU_TAG:  'tag-0f5f286d0007'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -80,6 +80,7 @@ variables:
       - NetworkManager-1*.tar.xz
       - NetworkManager-1*.src.rpm
       - nm-test.log
+      - testlog.txt
 
 .nm_artifacts_debug:
   artifacts:
@@ -87,6 +88,7 @@ variables:
     when: always
     paths:
       - nm-test.log
+      - testlog.txt
 
 #################################################################
 #                                                               #
