ci: allow to manually select the Fedora version for Tier 1
Versions that has branched out from Rawhide but are still not released
still have many changes that breaks the CI.

As we want the CI to be more stable for Tier 1, which runs for every MR,
do not make the switch as soon as Rawhide has branched, but when we choose so.

--- a/.gitlab-ci/distros-info.yml
+++ b/.gitlab-ci/distros-info.yml
@@ -9,8 +9,9 @@ fedora:
   support: yes
   nm: main
 - version: 41
-  support: yes
+  support: 2025-11-19
   nm: 1.50
+  tier1-default: yes
 - version: 40
   support: 2025-05-13
   nm: 1.46
