--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -693,8 +693,8 @@
                   values="default (-1), false (0), true (1)" />
         <property name="down-on-poweroff"
                   nmcli-description="Whether the connection will be brought down before the system is powered off.  The default value is &quot;default&quot; (-1). When the default value is specified, then the global value from NetworkManager configuration is looked up, if not set, it is considered as &quot;no&quot; (0)."
-                  format="ternary"
-                  values="true/yes/on, false/no/off, default/unknown" />
+                  format="choice (NMSettingConnectionDownOnPoweroff)"
+                  values="default (-1), no (0), yes (1)" />
         <property name="secondaries"
                   nmcli-description="List of connection UUIDs that should be activated when the base connection itself is activated. Currently, only VPN connections are supported."
                   format="list of strings" />
